Implement GetArticle API
